Practica Final Heroes.

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -29,5 +29,5 @@
 <label for = "hero-mundo">Mundo del Heroe: </label>
 <input id="hero-mundo" [(ngModel)]="selectedHero.mundo" placeholder="mundo">
 </div>
-
 </div>
+<app-hero-detail [hero] = "selectedHero"> </app-hero-detail>
