--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -20,5 +20,6 @@
       <label for="hero-mundo">MUNDO DEL HEROE: </label>
       <input id ="hero-mundo" [(ngModel)]="hero.mundo" placeholder="mundo">
     </div>
-
+    <button (click)="goBack()">Regresar</button>
+    <button (click)="save()">Guardar</button>
   </div>
