--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,33 +1,21 @@
-<h2>Mis heroes Favoritos</h2>
-<ul class="heroes">
-  <li *ngFor="let hero of heroes"
-    [class.selected]="hero === selectedHero"
-      (click)="onSelect(hero)">
-      <span class="badge">{{hero.id}}</span>{{hero.name}}
-    </li>
-</ul>
+<h2>MIS HEROES FAVORITOS</h2>
 
-<div *ngIf="selectedHero">
-  <h2>{{selectedHero.name | uppercase}} detalles</h2>
-  <div><span>id: </span>{{selectedHero.id}}</div>
-  <div>
-    <label for = "hero-name">Heroe Nombre: </label>
-      <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="nombre">
-    </div>
-    <div>
-    <label for = "hero-edad">Heroe Edad: </label>
-      <input id="hero-edad" [(ngModel)]="selectedHero.edad" placeholder="edad">
-    </div>
-    <div>
-    <label for = "hero-poder">Poder del Heroe: </label>
-      <input id="hero-poder" [(ngModel)]="selectedHero.poder" placeholder="poder">
-    </div>
-    <div>
-    <label for = "hero-identidad">Identidad del Heroe: </label>
-      <input id="hero-identidad" [(ngModel)]="selectedHero.identidad" placeholder="identidad">
-    </div>
-    <div>
-    <label for = "hero-mundo">Mundo del Heroe: </label>
-      <input id="hero-mundo" [(ngModel)]="selectedHero.mundo" placeholder="mundo">
-    </div>
+<div>
+  <label for="new-hero">Nombre del Heroe: </label>
+  <input id="new-hero" #heroName />
+
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button class="add-button" (click)="add(heroName.value); heroName.value=''">
+   Agregar Heroe
+  </button>
 </div>
+
+<ul class="heroes">
+  <li *ngFor="let hero of heroes">
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </a>
+    <button class="delete" title="Eliminar Heroe"
+      (click)="delete(hero)">x</button>
+  </li>
+</ul>
